--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
     <h3 style="color: darkgreen;"><i>skills</i></h3>
     <p style="color: green;"><i>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio error aut impedit ad asperiores. Perferendis itaque repudiandae mollitia eius temporibus quidem dolore accusamus culpa saepe. Distinctio, sequi? Voluptatibus, sapiente quos?</i></p>
     <section>
-      <h2>education</h2>
+      <h2>educatio</h2>
+      <h2>huuu</h2>
      <div class="education-container">
         <h3>upper primary</h3>
         <h4>2016-2020</h4>
